// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - warning 1`] = `
<span
  className="StatusIcon warning flex-center"
>
  <Memo()
    className="warning"
    fill={true}
    name="Circle"
    size={16}
  />
</span>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<span
  className="StatusIcon success flex-center"
>
  <Memo()
    className="success"
    fill={true}
    name="Circle"
    size={16}
  />
</span>
`;
